# message_downloader

./: .env  README.md  manage.py  pyproject.toml
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/email_mess_loader/: apps.py  models.py  routing.py  urls.py  views.py
apps/email_mess_loader/migrations/: 0001_initial.py
apps/mail_messages/: apps.py  consumers.py  messages_fetcher.py  models.py  routing.py  urls.py  views.py
apps/mail_messages/migrations/: 0001_initial.py  0002_alter_emailmessage_sent_date.py  0003_alter_emailmessage_received_date.py  0004_alter_emailmessage_body_alter_emailmessage_title.py
apps/users/: forms.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
message_downloader/: asgi.py  settings.py  urls.py  views.py  wsgi.py
message_downloader/templates/: base.html  footer.html  index.html  login.html
message_downloader/templates/accounts/: create_account.html  delete_account.html  show_accounts.html  update_account.html
message_downloader/templates/messages/: a.ntml  message_detail.html  show_messages.html
message_downloader/templates/users/: registration.html
