[tool.poetry]
name = "message-downloader"
version = "0.1.0"
description = ""
authors = ["rudich <rudi4.clarinet@mail.ru>"]
readme = "README.md"
packages = [{include = "message-downloader"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
channels = "4.0.0"
channels-redis = "4.1.0"
daphne = "4.0.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
